--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.5",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.1.6",
     "axios": "^1.9.0",
     "expo": "^53.0.0",
+    "expo-image-picker": "^17.0.8",
+    "expo-location": "^19.0.7",
     "expo-status-bar": "~2.0.0",
     "react": "^19.1.0",
+    "react-dom": "19.0.0",
     "react-native": "^0.80.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
@@ -24,6 +28,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-web": "^0.20.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
