Quase no fim, no meu fim!!

--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/logo2.svg",
+        "foregroundImage": "./assets/splash.png",
         "backgroundColor": "#ffffff"
       },
       "config": {
@@ -29,11 +29,11 @@
         }
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.BusApp"
     },
     "web": {
       "favicon": "./assets/logo.png"
     }
   }
 }
-
