--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
-  },
+  "start": "tsc && node dist/server.js",
+  "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+},
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
