--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,11 @@ DB_PORT=5432
 DB_NAME=busapp
 PORT=3000
 JWT_SECRET=chaveSecreta
+
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=smtp_user@example.com
+SMTP_PASS=senha_smtp
+SMTP_FROM="BusApp <no-reply@seudominio.com>"
+FRONTEND_URL=https://seu-frontend-ou-instrucao-para-app
+
