--- a/backend/package.json
+++ b/backend/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-  "start": "tsc && node dist/server.js",
-  "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
-},
+    "start": "tsc && node dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "socket.io": "^4.7.2"
   },
@@ -21,6 +22,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.1",
+    "@types/nodemailer": "^7.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
