icones/botão enviar msg

--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ DB_USER=postgres
 DB_PASS=123456789
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=busapp
+DB_NAME=app_mobile
 PORT=3000
 JWT_SECRET=chaveSecreta
 
