--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~5.0.5",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.1.6",
     "axios": "^1.9.0",
@@ -29,12 +30,14 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-uuid": "^2.0.3",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/pg": "^8.15.5",
     "@types/react": "^19.0.0",
+    "@types/react-native": "^0.72.8",
     "typescript": "~5.3.3"
   },
   "private": true
