--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~5.0.5",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.1.6",
     "axios": "^1.9.0",
